2007-11-17  Thiemo Seufer  <ths@mips.com>

	* config/tc-mips.c (md_parse_option): Match mips_optimize to the -O
	option supplied, but still keep mips_optimize == 2 as default value.

2007-11-17  Thiemo Seufer  <ths@mips.com>

	* doc/as.texinfo: Document the new attribute value.

2007-11-16  Eric B. Weddington  <eric.weddington@atmel.com>

	* config/tc-avr.c (mcu_types): Add ATmega32HVB device.
	* doc/c-avr.texi: Likewise.

2007-11-16  Eric B. Weddington  <eric.weddington@atmel.com>

	* config/tc-avr.c (mcu_types): Add ATmega1284P device.
	* doc/c-avr.texi: Likewise.

2007-11-14  Tristan Gingold  <gingold@adacore.com>

	* config/tc-ia64.c (AR_RUC): Defined.
	(ar): Add "ar.ruc".
	(specify_resource): Handle AR_RUC like AR_ITC.

2007-11-13  Nick Clifton  <nickc@redhat.com>

	* config/tc-mn10300.c (mn10300_force_relocation): Force a reloc to
	be generated for alignment fixups.
	* config/tc-mn10300.h (TC_FORCE_RELOCATION): Call
	mn10300_force_relocation.

2007-11-12  Nick Clifton  <nickc@redhat.com>

	PR gas/5269
	* config/tc-frv.c (md_show_usage): Rewrite usage description to
	make it easier to translate.
	* gas/po/gas.pot: Regenerate.

2007-11-12  Tristan Gingold  <gingold@adacore.com>

	* config/tc-ppc.c (md_assemble): If -mregnames, when parsing
	PPC_OPERAND_CR always parse as expression to allow register name
	followed by an expression.

2007-11-09  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (match_template): Re-order suffix check.

2007-11-07  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (relaxable_section): Check for .eh_frame.

2007-11-07  Eric B. Weddington  <eweddington@cso.atmel.com>

	* config/tc-avr.c (mcu_types): Add ATtiny88 device.
	* doc/c-avr.texi: Likewise.

2007-11-07  Anatoly Sokolov <aesok@post.ru>

	* config/tc-avr.c (mcu_types): Add new devices: ATmega48P,
	ATmega88P, ATmega168P, Atmega328P
	* doc/c-avr.texi: Document new devices.

2007-11-07  Tristan Gingold  <gingold@adacore.com>
